tests/test-files/bad/Imports/UseHiddenValues.elm

import Imports (BooleanExpr(..))

bool = Or (Not T) F